# Version Required: Lowest
cmake_minimum_required( VERSION 3.0 )

# Create compile_commands.json automatically
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Your Project Name
project(Test1)

# Set include path
include_directories(CMAKE_CURRENT_SOURCE_DIR/include)

# Create the final add 
add_executable()



